Now the navbar is fixed, the page content doesn't know about it, so we need padding, otherwise the navbar overlaps the top heading

--- a/application/frontend/src/scaffolding/Header/header.scss
+++ b/application/frontend/src/scaffolding/Header/header.scss
@@ -1,5 +1,9 @@
 // 1. NAVBAR CONTAINER & LAYOUT
 
+main {
+  padding-top: 4rem;
+}
+
 .navbar {
   // Positioning and background
   position: fixed;
@@ -300,3 +304,4 @@
     display: block;
   }
 }
+
